--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Bright Smiles Childcare offers nurturing daycare, childcare and preschool services in Auburn, WA. Our curriculum focuses on child development, exploration, and learning through play-based activities.">
+    <meta name="description" content="Bright Smiles Home Childcare provides nurturing daycare, childcare, and preschool services in Auburn, WA, emphasizing child development through play-based activities.">
     <meta name="keywords" content="childcare, daycare, daycare near me, childcare near me, daycare, preschool, childcare services, early education, child development, Auburn WA, play-based learning">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
 
