--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Bright Smiles Home Childcare provides nurturing daycare, childcare, and preschool services in Auburn, WA, emphasizing child development through play-based activities.">
+    <meta name="description" content="Bright Smiles Home Childcare provides nurturing daycare, childcare services in Auburn, WA, emphasizing child development.">
     <meta name="keywords" content="childcare, daycare, daycare near me, childcare near me, daycare, preschool, childcare services, early education, child development, Auburn WA, play-based learning">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
 
@@ -34,7 +34,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Bright Smiles Childcare - Nurturing Childcare & Preschool Services</title>
+    <title>Bright Smiles Home Childcare - Childcare & Preschool Services</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
